    - added function GWEN_XMLNode_GetHeader()
    - added function GWEN_XMLNode_AddHeader()
    - added function GWEN_XMLNode_DelHeader()
    - added function GWEN_XMLNode_ClearHeaders()
- GWEN_TEXT:
  - fixed a bug in GWEN_Text_CountUtf8Chars()
- added a test profile which can be used with "gwentest xsd3"
- Christian established that the current CVS compiles under MinGW32.


2004/12/13: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
Please note: The changes below are not checked on WIN32 !!
I sometimes used the function strncasecmp(), maybe we have to find a way
around this for WIN32 (or does MinGW already support it?)
  ------------------------------------------------------------------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

- GWEN_XSD:
  - started working on XSD module (not complete !!!)

- GWEN_XML:
  - fixed some bugs in XML code:
    - now "[" and "]" are accepted within XML files (mostly used within 
      <!DOCTYPE> tags), so we can now also read valid XML files (like the
      various XSD files I'm currently dealing with)
    - fixed the bug concerning simple quote characters ('): These characters
      are now valid, too.
  - added function GWEN_XML_GetXPath which returns the XPath from one
    XML node to another one
  - added flag GWEN_XML_FLAGS_INLINE_DATA (used to inline data tags directly
    between start and end tag without any linefeed
  - now indention is only done if the line position pointer in the BIO is 0
    (which means: no unnecessary indention)
  - added function GWEN_XMLNode_NormalizeNameSpaces() to remove unnecessary
    namespaces from an XML tree
  - special characters (like "&<>" etc) are now escaped and unescaped in
    tagnames, property names and values and data.
  - added function GWEN_XML_fromString() which creates an XML tree from
    a string

- GWEN_BUFFER: