@@ -1,2 +1,2 @@
-EXTRA_DIST=apidoc.h STYLE db2.png testdialog.xml
+EXTRA_DIST=apidoc.h STYLE db2.png testdialog.xml plugindescr.xsd.in
 
