@@ -1,0 +1,49 @@
+<?xml version="1.0" encoding="utf8" ?>
+<!DOCTYPE schema
+  PUBLIC "-//W3C//DTD XMLSchema 200102//EN" 
+         "http://www.w3.org/2001/XMLSchema.dtd"
+>
+<!-- 
+ cvs         : $Id$
+ begin       : Tue Sep 09 2003
+ copyright   : (C) 2003 by Martin Preuss
+ email       : martin@libchipcard.de
+
+ XML schema for Gwenhywfar PluginDescr files
+ Part of Gwenhywfar @GWENHYWFAR_VERSION_STRING@.
+-->
+
+<xs:schema xmlns="http://www.aquamaniac.de/gwenhywfar/"
+  targetNamespace="http://www.aquamaniac.de/gwenhywfar/"
+  xmlns:xs="http://www.w3.org/2001/XMLSchema">
+
+  <xs:simpleType name="country" >
+    <xs:restriction base="xs:string">
+      <xs:pattern value="[a-zA-Z]{1,3}" />
+    </xs:restriction>
+  </xs:simpleType>
+  
+  <xs:complexType name="plugin" >
+    <xs:sequence>
+      <xs:element name="version" type="xs:string" />
+      <xs:element name="author" type="xs:string" />
+      <xs:element name="short" type="xs:string" />
+      <xs:element name="descr" type="xs:string" minOccurs="0" />
+    </xs:sequence>
+    
+    <xs:attribute name="name" type="xs:string" />
+    <xs:attribute name="lang" type="country" />
+    <xs:attribute name="type" type="xs:string" />
+    
+  </xs:complexType>
+
+  <xs:complexType name="PluginDescr" >
+    <xs:sequence>
+      <xs:element name="plugin" type="plugin" 
+      	minOccurs="1" maxOccurs="unbounded"/>
+    </xs:sequence>
+  </xs:complexType>
+
+  <xs:element name="PluginDescr" type="PluginDescr" />
+
+</xs:schema>
