@@ -1,18 +1,22 @@
-<plugin name="csv" type="dbio" >
-  <version>@GWENHYWFAR_VERSION_STRING@</version>
-  <author>Martin Preuss(martin@libchipcard.de)</author>
-  <short>Exporter for CSV</short>
-  <descr>
-    This plugin exports data to a CSV file according to a given configuration.
-  </descr>
-</plugin>
+<?xml version="1.0" encoding="utf8" ?>
+<!DOCTYPE GWEN_PluginDescr SYSTEM "gwen/plugindescr.xsd" >
 
-<plugin name="csv" type="dbio" lang="de" >
-  <version>@GWENHYWFAR_VERSION_STRING@</version>
-  <author>Martin Preuss(martin@libchipcard.de)</author>
-  <short>Exporter fuer CSV</short>
-  <descr>
-    Diese Erweiterung importiert und exportiert CSV-Dateien.
-  </descr>
-</plugin>
-
+<PluginDescr xmlns="http://www.aquamaniac.de/gwenhywfar/" >
+  <plugin name="csv" type="dbio" >
+    <version>@GWENHYWFAR_VERSION_STRING@</version>
+    <author>Martin Preuss(martin@libchipcard.de)</author>
+    <short>Exporter for CSV</short>
+    <descr>
+      This plugin exports data to a CSV file according to a given configuration.
+    </descr>
+  </plugin>
+  
+  <plugin name="csv" type="dbio" lang="de" >
+    <version>@GWENHYWFAR_VERSION_STRING@</version>
+    <author>Martin Preuss(martin@libchipcard.de)</author>
+    <short>Exporter fuer CSV</short>
+    <descr>
+      Diese Erweiterung importiert und exportiert CSV-Dateien.
+    </descr>
+  </plugin>
+</PluginDescr>
