@@ -1,10 +1,25 @@
-<plugin name="olddb" type="dbio" >
-  <version>@GWENHYWFAR_VERSION_STRING@</version>
-  <author>Martin Preuss(martin@libchipcard.de)</author>
-  <short>Importer for OpenHBCI1</short>
-  <descr>
-    This plugin imports data from an old OpenHBCI1-style file.
-  </descr>
-</plugin>
+<?xml version="1.0" encoding="utf8" ?>
+<!DOCTYPE GWEN_PluginDescr SYSTEM "gwen/plugindescr.xsd" >
+
+<PluginDescr xmlns="http://www.aquamaniac.de/gwenhywfar/" >
+  <plugin name="olddb" type="dbio" >
+    <version>@GWENHYWFAR_VERSION_STRING@</version>
+    <author>Martin Preuss(martin@libchipcard.de)</author>
+    <short>Importer for OpenHBCI1</short>
+    <descr>
+      This plugin imports data from an old OpenHBCI1-style file.
+    </descr>
+  </plugin>
+
+  <plugin name="olddb" type="dbio" lang="de" >
+    <version>@GWENHYWFAR_VERSION_STRING@</version>
+    <author>Martin Preuss(martin@libchipcard.de)</author>
+    <short>Importer fuer OpenHBCI1</short>
+    <descr>
+      Diese Erweiterung importiert und exportiert OpenHBCI1-Dateien.
+    </descr>
+  </plugin>
+
+</PluginDescr>
 
 
